@@ -93,6 +93,7 @@ class CodeBlock(Directive):
         'lineno-start': int,
         'emphasize-lines': directives.unchanged_required,
         'caption': directives.unchanged_required,
+        'name': directives.unchanged,
     }
 
     def run(self):
@@ -127,7 +128,12 @@ class CodeBlock(Directive):
 
         caption = self.options.get('caption')
         if caption:
+            self.options.setdefault('name', nodes.fully_normalize_name(caption))
             literal = container_wrapper(self, literal, caption)
+
+        # literal will be note_implicit_target that is linked from caption and numref.
+        # when options['name'] is provided, it should be primary ID.
+        self.add_name(literal)
 
         return [literal]
 
@@ -159,6 +165,7 @@ class LiteralInclude(Directive):
         'append': directives.unchanged_required,
         'emphasize-lines': directives.unchanged_required,
         'caption': directives.unchanged,
+        'name': directives.unchanged,
         'diff': directives.unchanged_required,
     }
 
@@ -332,10 +339,14 @@ class LiteralInclude(Directive):
 
         caption = self.options.get('caption')
         if caption is not None:
-            if caption:
-                retnode = container_wrapper(self, retnode, caption)
-            else:
-                retnode = container_wrapper(self, retnode, self.arguments[0])
+            if not caption:
+                caption = self.arguments[0]
+            self.options.setdefault('name', nodes.fully_normalize_name(caption))
+            retnode = container_wrapper(self, retnode, caption)
+
+        # retnode will be note_implicit_target that is linked from caption and numref.
+        # when options['name'] is provided, it should be primary ID.
+        self.add_name(retnode)
 
         return [retnode]
 
