@@ -79,7 +79,9 @@ Features added
 
 * #1227: Add `html_scaled_image_link` config option to conf.py, to control
   scaled image link.
-* #1700: Add `:caption:` option for `toctree`.
+* #1700: Add ``:caption:`` option for :rst:dir:`toctree`.
+* #1742: ``:name:`` option is provided for :rst:dir:`toctree`, :rst:dir:`code-block` and
+  :rst:dir:`literalinclude` dirctives.
 
 Bugs fixed
 ----------
